1.with判断增加doris类型 2.修改思考过程提示词增加术语信息 3.转义阶段去除分词提取的维度判断